data/derived/sp14/progs/unify/prog0218.ml.out
Characters 71-104:
  | h::t -> (mulByDigit i (List.rev t) * 10 )  h*i;;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
